--- a/WorkLaba1.4
+++ b/WorkLaba1.4
@@ -1,1 +1,29 @@
+#include <stdio.h>
 
+// Функция для обмена значений двух целых чисел через указатели
+void swapInts(int *p1, int *p2) {
+    int temp = *p1;     // Временная переменная сохраняет значение первого числа
+    *p1 = *p2;          // Первое число получает значение второго
+    *p2 = temp;         // Второе число получает первоначальное значение первого
+}
+
+// Основная программа
+int main() {
+    int a, b;
+
+    // Запрашиваем у пользователя ввод значений
+    printf("Введите первое целое число: ");
+    scanf("%d", &a);
+
+    printf("Введите второе целое число: ");
+    scanf("%d", &b);
+
+    printf("\\nДо замены: a = %d, b = %d\\n", a, b);
+
+    // Производим обмен значений через указатели
+    swapInts(&a, &b);
+
+    printf("После замены: a = %d, b = %d\\n", a, b);
+
+    return 0;
+}
